fix: use Multi for validate TextMessages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-# Quarkus HTTP Server
+# HTTP Server Port
 quarkus.http.port=8081
 
-# Kafka Konfiguration für Quarkus Service 2
+# Kafka Consumer (Validation-Request)
 mp.messaging.incoming.validation-request.connector=smallrye-kafka
 mp.messaging.incoming.validation-request.topic=validation-request
-mp.messaging.incoming.validation-request.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
+mp.messaging.incoming.validation-request.value.deserializer=ch.hftm.kafka.ValidationRequestDeserializer
 
+# Kafka Producer (Validation-Response)
 mp.messaging.outgoing.validation-response.connector=smallrye-kafka
 mp.messaging.outgoing.validation-response.topic=validation-response
-mp.messaging.outgoing.validation-response.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+mp.messaging.outgoing.validation-response.value.serializer=ch.hftm.kafka.ValidationResponseSerializer
