--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
 
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-smallrye-reactive-messaging-kafka</artifactId>
-            <version>3.15.3</version>
+            <artifactId>quarkus-messaging-kafka</artifactId>
+            <version>3.18.1</version>
         </dependency>
 
 
