fix: add README and cleanup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 # HTTP Server Port
 quarkus.http.port=8081
+kafka.bootstrap.servers=redpanda-1:9092
 
 # Kafka Consumer (Validation-Request)
 mp.messaging.incoming.validation-request.connector=smallrye-kafka
 mp.messaging.incoming.validation-request.topic=validation-request
 mp.messaging.incoming.validation-request.value.deserializer=ch.hftm.kafka.ValidationRequestDeserializer
+mp.messaging.incoming.validation-request.auto.offset.reset=earliest
 
 # Kafka Producer (Validation-Response)
 mp.messaging.outgoing.validation-response.connector=smallrye-kafka
