test: implement tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ mp.messaging.incoming.validation-request.auto.offset.reset=earliest
 mp.messaging.outgoing.validation-response.connector=smallrye-kafka
 mp.messaging.outgoing.validation-response.topic=validation-response
 mp.messaging.outgoing.validation-response.value.serializer=ch.hftm.kafka.ValidationResponseSerializer
+
+# Test
+%test.mp.messaging.incoming.validation-request.enabled=false
+%test.kafka.bootstrap.servers=localhost:9092
