--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -54,7 +54,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            ${{ secrets.DOCKER_USERNAME }}/quarkus-service-2
+            davidoetterli/quarkus-service-2
             ghcr.io/${{ github.repository }}
 
       - name: Build and push Docker images
