--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,58 +1,24 @@
-name: Publish Docker Image
+name: Build Package
 
 on:
   workflow_run:
-    workflows: ["Build Package"]
+    workflows: ["Run Tests"]
     types:
       - completed
 
 jobs:
-  publish-docker:
+  build:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
-      contents: read
-      attestations: write
-      id-token: write
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          distribution: temurin
+          java-version: 17
 
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: |
-            ${{ secrets.DOCKER_USERNAME }}/quarkus-service-2
-            ghcr.io/${{ github.repository }}
-
-      - name: Build and push Docker images
-        id: push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: src/main/docker/Dockerfile.jvm
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v2
-        with:
-          subject-name: ghcr.io/${{ github.repository }}
-          subject-digest: ${{ steps.push.outputs.digest }}
-          push-to-registry: true
+      - name: Build Package
+        run: mvn clean package -DskipTests
