--- a/.github/workflows/publish-docker-image.yml
+++ b/.github/workflows/publish-docker-image.yml
@@ -2,12 +2,12 @@ name: Publish Docker Image
 
 on:
   workflow_run:
-    workflows: ["Build Package"]
+    workflows: [ "Build Package" ]
     types:
       - completed
 
 jobs:
-  publish-docker:
+  build-and-publish:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     permissions:
