--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -28,3 +28,19 @@ jobs:
 
       - name: Run Tests
         run: mvn clean verify
+
+      # Falls die tests fehlschlagen, kann man so ein mail verschicken.
+#      - name: Send Email on Failure
+#        if: failure()
+#        uses: dawidd6/action-send-mail@v3
+#        with:
+#          server_address: smtp.example.com
+#          server_port: 587
+#          username: ${{ secrets.EMAIL_USERNAME }}
+#          password: ${{ secrets.EMAIL_PASSWORD }}
+#          subject: 'Build Failed: ${{ github.repository }}'
+#          to: deine_email@beispiel.ch
+#          from: deine_email@beispiel.ch
+#          body: |
+#            Der Build im Repository ${{ github.repository }} ist fehlgeschlagen.
+#            Weitere Informationen findest Du unter: ${{ github.run_url }}.
